--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>GetMIT!</title>
+  <title>GetWANG!</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,13 +16,13 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">GetMIT</h1>
+      <h1 class="title">GetWANG</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Combine other colleges to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>MIT!</strong></span></p>
+    <p class="game-intro">Combine the Wang Advisees to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>WANG!</strong></span></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -66,12 +66,12 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same college touch, they <strong>merge into one!</strong>
-      <br><strong class="important">Note:</strong> The order of colleges is not intended to be a ranking (boo), but a rough west-to-east geographical path to MIT.
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same advisee touch,they <strong>merge into one!</strong>
+      <br><strong class="important">Note:</strong>This <strong>is</strong> a grade ranking (Freshman-Sophomore-Junior-Senior-Mrs.Wang).
     </p>
     <hr>
     <p>
-    Created by <a href="http://web.mit.edu/mitchgu/www">Mitchell Gu</a>. Inspired by <a href="http://naveenarun.github.io/GetCaltech/">Get Caltech by Naveen Arun</a>. Based on <a href="http://gabrielecirulli.com" target="_blank">2048 by Gabriele Cirulli.</a> and <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="https://github.com/TIMARAM-RAM/GetWANG">Fatima Ramirez-Ramos</a>. Inspired by <a href="https://github.com/getpvi/GetPVI">Get PVI by Declan Emery</a>.
     </p>
     <hr>
     <p>
