--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>GetWANG!</title>
+  <title>GetPVI!</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -12,17 +12,26 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBWSG0EH6E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WBWSG0EH6E');
+  </script>
 </head>
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">GetWANG</h1>
+      <h1 class="title">GetPVI</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro"> Combine the Wang Advisees to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>WANG!</strong></span></p>
+    <p class="game-intro">Combine other high schools to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>PVI!</strong></span></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -66,17 +75,15 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same advisee touch,they <strong>merge into one!</strong>
-      <br><strong class="important">Note:</strong>This <strong>is</strong> a grade ranking (Freshman-Sophomore-Junior-Senior-Mrs.Wang).
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same advisee touch, they <strong>merge into one!</strong>
+	    <br><strong class="important">Note:</strong> This <strong>s</strong> a grade leveling(freshman-sophomore-junior-senior-mrs.wang)
     </p>
     <hr>
     <p>
-    Created by <a href="https://github.com/TIMARAM-RAM/GetWANG" >Fatima Ramirez-Ramos</a>. Inspired by <a href="https://github.com/getpvi/GetPVI">Get PVI by Declan Emery</a>.
+    Created by Fatima Ramirez-Ramos. Inspired by GetPVI by <a href=https://github.com/getpvi/GetPVI>Declan Emery</a>.
     </p>
-    <hr>
-    <p>
-    Background Image: Kresge Auditorium in December <br> Photocred: <a href="https://twitter.com/DrDawnMIT/status/416643272153763841">@DrDawnMIT</a>
-    </p>
+
+    <p style="font-size: 8px">Launched 11/23/2021 - Last Updated 12/2/2021</p>
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
