--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Combine other high schools to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>PVI!</strong></span></p>
+    <p class="game-intro">Combine the Wang Advisees to reach the<span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>WANG!</strong></span></p>
 
     <div class="game-container">
       <div class="game-message">
@@ -61,14 +61,14 @@
         </div>
       </div>
 
-      <div class= "tile-container">
+      <div class="tile-container">
 
       </div>
     </div>
 
-    <p class= "game-explanation">
-      <strong class="important"> How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same advisee touch, they <strong>merge into one!</strong>
-	    <br><strong class="important">Note:</strong> This <strong>s</strong> a grade leveling(freshman-sophomore-junior-senior-mrs.wang)
+    <p class="game-explanation">
+     <strong class="important"> How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same advisee touch, they <strong>merge into one!</strong>
+	    <br><strong class="important">Note:</strong> This <strong>is</strong> a grade leveling(freshman-sophomore-junior-senior-mrs.wang)
     </p>
     <hr>
     <p>
