--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   </script>
 </head>
 <body>
-  <div class="container">
+     window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WBWSG0EH6E');<div class="container">
     <div class="heading">
       <h1 class="title">GetPVI</h1>
       <div class="scores-container">
