--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8">
- <title> GetPVI!</title>
+ <title>GetWANG!</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -21,13 +21,13 @@
 
     gtag('config', 'G-WBWSG0EH6E');<div class="container">
     <div class="heading">
-      <h1 class="title">GetPVI</h1>
+      <h1 class="title">GetWANG</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Combine the Wang Advisees to reach the<span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>WANG!</strong></span></p>
+    <p class="game-intro">Combine the Wang Advisees to reach the <span onclick="document.body.style.background='url(img/petey.png)';">almighty <strong>WANG!</strong></span></p>
 
     <div class="game-container">
       <div class="game-message">
